Correct fine-tuned model name

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -48,8 +48,7 @@
       "outputs": [],
       "source": [
         "model_name = \"gpt-3.5-turbo-instruct\"\n",
-        "finetuned_model = \"NghiemAbe/flan-t5-base-mathqa-v3\"\n",
-        "# finetuned_model = \"google/flan-t5-base\"\n",
+        "finetuned_model = \"NghiemAbe/flan-t5-base-mathqa_v3\"\n",
         "device = \"cuda\"\n",
         "data_path = \"./data/test/all_test_round1.json\"\n",
         "OPEN_API_KEY = [\n",
@@ -64,7 +63,7 @@
         "    'sk-tiSIsPpdU...ASByPrfRtQasrZ',\n",
         "    'sk-AvS3nk3VE...rKxiZMfQ0zhT7Q',\n",
         "    'sk-jpqVKfQ8i...JCUZvLhT8NRlhR',\n",
-        "    # 'sk-',    # As much as possible\n",
+        "    # 'sk-',    # As much as possible :)\n",
         "]\n"
       ]
     },
@@ -375,7 +374,6 @@
         "                            finish = time.time()\n",
         "                            time_request = finish - start\n",
         "                            result = responese.choices[0].text.strip()\n",
-        "                            # key_index = (key_index + 1) % len(api_keys)\n",
         "                        except openai.error.RateLimitError:\n",
         "                            if key_index == 0:\n",
         "                                print(\"Waiting...\")\n",
@@ -383,7 +381,6 @@
         "                            continue\n",
         "                        finally:\n",
         "                            key_index = (key_index + 1) % len(api_keys)\n",
-        "                    # time_request = finish - start\n",
         "                    print(f\"Time request for {problem['id']}: {time_request}, answer: {result}\")\n",
         "                choose = convert_to_submit_file(result)\n",
         "                f.write(choose + '\\t' + str(time_request) + '\\n')\n",
